# octoflash-ai-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  buildspec.yml  docker-compose.yml  octoflash_app.py  pyproject.toml
alembic/: env.py
alembic/versions/: 20260517_1503-beb66710df84_initial_schema.py  20260518_1953-aa1dc5896559_add_channel_channel_video_tables.py  20260520_1314-0001_initial_schema.py  20260520_1420-0002_workflow_execution_kind.py  20260520_1700-0003_dual_orientation.py  20260521_1300-0004_cognito_and_tenancy.py  20260521_1400-0005_billing.py  20260521_1500-0006_project_tenancy_columns.py  20260521_1800-0007_user_preference.py  20260523_0000-0002_execution_node.py  20260523_0100-0003_target_platforms.py  20260528_0000-0004_waitlist_entry.py  20260614_0000-0005_user_auth_sub.py  20260615_0000-0006_rls_deny_all_public.py  20260616_0000-0007_scene_render.py  20260618_0000-0008_youtube_ingest_guard.py
app/: main.py  settings.py
app/api/: tags.py
app/common/: exceptions.py  pagination.py
app/db/: engine.py  session.py
app/llm/: __init__.py  kinds.py  litellm_adapter.py  router.py
app/manim_pipeline/: diagram_patterns.py  math_animations.py  ml_visuals.py  plot_patterns.py  styles.py  visual_effects.py  voices.py
app/model/: __init__.py  billing_event_model.py  channel_model.py  channel_video_model.py  credential_model.py  execution_log_model.py  execution_phase_model.py  job_model.py  org_membership_model.py  organization_model.py  project_model.py  scene_instruction_model.py  scene_model.py  scene_render_model.py  source_model.py  source_video_model.py  subscription_model.py  target_model.py  user_model.py  user_preference_model.py  variation_model.py  waitlist_model.py  workflow_edge_instance_model.py  workflow_edge_model.py  workflow_execution_model.py  workflow_model.py  workflow_node_instance_model.py  workflow_node_model.py  workflow_node_prop_model.py  workflow_node_type_model.py  workspace_model.py  youtube_ingest_guard_model.py
app/service/: article_scraper_service.py  billing_service.py  channel_service.py  clip_planner_service.py  credential_service.py  describer_service.py  evaluator_service.py  export_service.py  ffmpeg_concat_service.py  frame_extractor_service.py  instruct_service.py  job_service.py  log_sink_service.py  manim_render_service.py  manim_runner_service.py  manim_scene.py  node_runner_service.py  oauth_refresh.py  oauth_service.py  org_membership_service.py  organization_service.py  planner_prompts.py  scene_service.py  (+23 more)
docs/: llm.md  octoflash.md
infra/: PREFLIGHT.md  cleanup.sh  deploy.sh
scripts/: portrait_smoke.py  preview_template.py  setup-local.sh  smoke_pipeline.py  smoke_workflow.py
sql/: schema.sql
tests/: conftest.py  test_llm_router.py
(+214 files in other folders)
