[tool.poetry]
name = "octoflash-ai-backend"
version = "0.1.0"
description = "Octoflash AI Backend — scene-first Manim video editor API"
authors = ["Sunil Tiwari <suniltiwari@ebay.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.34.0" }
httpx = "^0.28.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.9.0"
sqlalchemy = "^2.0.40"
asyncpg = "^0.30.0"
alembic = "^1.15.0"
psycopg = { version = "^3.2.0", extras = ["binary"] }
aiohttp = "^3.12.0"
jinja2 = "^3.1.4"
aioboto3 = "^15.5.0"
anthropic = "^0.50.0"
manim = "^0.18.0"
faster-whisper = "^1.0.0"
yt-dlp = "^2025.1.15"
google-api-python-client = "^2.150.0"
temporalio = "^1.8.0"
youtube-transcript-api = "^0.6.2"
beautifulsoup4 = "^4.12.3"
feedparser = "^6.0.11"
lxml = "^5.3.0"
pillow = "^11.0.0"
manim-voiceover = {extras = ["elevenlabs"], version = "^0.3.7"}
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
stripe = "^11.0.0"
# LLM router (app/llm) — unifies Anthropic + Ollama (+ vLLM / LM Studio
# via the same OpenAI-compatible adapter). Local-first when
# OLLAMA_BASE_URL is set, hosted-only otherwise.
litellm = "^1.55.0"
python-multipart = "^0.0.29"
email-validator = "^2.3.0"
supabase = ">=2.0"
modal = "^1.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pre-commit = "^3.4.0"
black = "^24.3.0"
isort = "^5.13.0"
mypy = "^1.9.0"
ruff = "^0.8.0"
debugpy = "^1.8.0"
aiosqlite = "^0.22.1"
greenlet = "^3.4.0"

# `manimgl` is only needed when running the /playground/render endpoint in
# local (non-Docker) mode. Kept in its own optional group so day-to-day
# `poetry install` stays small — opt in with `make install-playground` or
# `poetry install --with playground`.
playwright = "^1.60.0"
[tool.poetry.group.playground]
optional = true

[tool.poetry.group.playground.dependencies]
manimgl = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "UP017", # datetime.UTC alias -- keep timezone.utc for consistency
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
